# Basic_NN

./: .gitignore  Ref.md
cppCNN/: CMakeLists.txt  Readme.md
cppCNN/src/: CMakeLists.txt  data.txt  generate_data.py  linear.cc  linear.h  main.cc  tensor.cc  tensor.h
cppNN/src/: main.cc  tensor.h
numpyCNN/: Readme.md  linear_moon.py
numpyCNN/src/: activation.py  cost.py  nn.py  optimizer.py
numpyCNN/src/layers/: activation.py  conv.py  fc.py  layer.py  linear.py  linear_2.py  pooling.py  softmax.py
numpyCNN/test/test_layers/: test_conv.py  test_dropout.py  test_linear.py  visualize_linear.py
numpyNN/: Readme.md  mnist.py
numpyNN/src/: optimizer.py
numpyNN/src/layers/: conv.py  dropout.py  linear.py  softmax.py
numpyNN/test/test_layers/: test_conv.py  test_linear.py
